# PySharpe

./: Cargo.toml  README.md
examples/: OptimizedSharpes.ipynb
src/: lib.rs
