[package]
name = "getstock"
version = "0.1.0"
authors = ["td4b <edwin.twest@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = "0.13.1"
ndarray-stats = "0.3.0"
rand = "0.7.3"
ndarray-rand = "0.11.0"
itertools = "0.9.0"
#yahoo-finance = "0.2.0"
log = "0.4.8"
simplelog = "^0.7.6"
numpy = "0.9.0"

[lib]
name = "statsdata"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]